Copied over some tests from stanford-wbc.sf.net and integrated them into MiniTAO. Will use them for coverage analysis, in order to kick out unused parts of TAO.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ endif (COMMAND CMAKE_POLICY)
 # project setup
 
 project (MiniTAO)
+add_definitions (-DTIXML_USE_STL)
 include_directories (tao)
 include (CheckIncludeFileCXX)
 
@@ -121,3 +122,5 @@ install (DIRECTORY tao/tao/
   FILES_MATCHING PATTERN "*.inl")
 
 install (TARGETS minitao DESTINATION lib)
+
+subdirs (tixml261 tests)
