Confine all purely test-related things into the tests/ subdirectory:  * check for gtest  * the entire tixml261 codebase Thus, if you don't have gtest, it won't even try to compile anything that exists solely for the purpose of testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ endif (COMMAND CMAKE_POLICY)
 # project setup
 
 project (MiniTAO)
-add_definitions (-DTIXML_USE_STL)
 include_directories (tao)
 include (CheckIncludeFileCXX)
 
@@ -22,35 +21,6 @@ if (COVERAGE)
   add_definitions (-ftest-coverage)
   set (MAYBE_GCOV gcov)
 endif (COVERAGE)
-
-##################################################
-# find Google Testing Framework
-
-if (NOT GTEST_DIR)
-  set (GTEST_DIR $ENV{GTEST_DIR})
-endif (NOT GTEST_DIR)
-if (GTEST_DIR)
-  list (APPEND CMAKE_REQUIRED_INCLUDES ${GTEST_DIR}/include ${GTEST_DIR})
-  include_directories (${GTEST_DIR}/include ${GTEST_DIR})
-  link_directories (${GTEST_DIR}/lib ${GTEST_DIR})
-endif (GTEST_DIR)
-check_include_file_cxx (gtest/gtest.h HAVE_GTEST_HEADER)
-if (${HAVE_GTEST_HEADER})
-  if (GTEST_DIR)
-    find_library (HAVE_GTEST_LIB gtest PATHS ${GTEST_DIR} ${GTEST_DIR}/lib)
-  else (GTEST_DIR)
-    find_library (HAVE_GTEST_LIB gtest)
-  endif (GTEST_DIR)
-  if (HAVE_GTEST_LIB MATCHES "NOTFOUND")
-    message ("WARNING gtest library not found, although the header gtest/gtest.h was found")
-  else (HAVE_GTEST_LIB MATCHES "NOTFOUND")
-    message ("found gtest")
-    set (HAVE_GTEST TRUE)
-    add_definitions (-DHAVE_GTEST)
-  endif (HAVE_GTEST_LIB MATCHES "NOTFOUND")
-else (${HAVE_GTEST_HEADER})
-  message ("WARNING did not find gtest")
-endif (${HAVE_GTEST_HEADER})
 
 ##################################################
 # find Eigen matrix and linear algebra library (version 2.x)
@@ -126,4 +96,4 @@ install (DIRECTORY tao/tao/
 
 install (TARGETS minitao DESTINATION lib)
 
-subdirs (tixml261 tests)
+subdirs (tests)
